# ooplabki

lab1/: a.out  matrix.cpp
lab2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  curve  curve.cpp  curve.hpp  main.cpp  test  tests.cpp  volgactf.py
lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  binary.cpp  binary.hpp  cmake_install.cmake  main.cpp  test
lab3b/: 2  CMakeLists.txt  binary.cpp  binary.hpp  main.cpp  test
lab4/: Vector.h  chessman.h  main.cpp
lab4/board/piece/: Doxyfile  chess  chessboard.cpp  chessboard.h  game.cpp  game.h  main.cpp  movement.cpp  movement.h  piece.cpp  piece.h
lab4/board/piece/html/: annotated.html  chessboard_8h_source.html  classBishop-members.html  classBishop.html  classChessBoard-members.html  classChessBoard.html  classChessGame-members.html  classChessGame.html  classChessGameState-members.html  classChessGameState.html  classKing-members.html  classKing.html  classKnight-members.html  classKnight.html  classMoveCommand-members.html  classMoveCommand.html  classMovement-members.html  classMovement.html  classPawn-members.html  classPawn.html  classPiece-members.html  classPiece.html  classPieceFactory-members.html  classPieceFactory.html  classPosition-members.html  classPosition.html  classQueen-members.html  classQueen.html  classRenderer-members.html  classRenderer.html  classRook-members.html  classRook.html  classSetup-members.html  classSetup.html  classes.html  files.html  functions.html  functions_func.html  game_8h_source.html  hierarchy.html  (+5 more)
lab4/constants/: constants.h
(+35 files in other folders)
